Add whatsapp flutuante

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -113,6 +113,24 @@
   }
 }
 
+.whatsapp-fixed {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 60px;
+  height: 60px;
+  background-image: url(../../images/footer/whats-fixed.png);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 90%;
+  z-index: 10;
+  background-color: var(--primary-1);
+  border-radius: 50%;
+  &:hover {
+    background-size: 94%;
+  }
+}
+
 @media (min-width: $md) {
   .footer {
 
@@ -125,5 +143,10 @@
         width: auto;
       }
     }
+  }
+
+  .whatsapp-fixed {
+    bottom: 30px;
+    right: 30px;
   }
 }
