--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -10,6 +10,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 1.5em;
+    justify-content: center;
 
     .listitem {
       display: flex;
@@ -22,22 +23,20 @@
 
     .icon {
       width: 75px;
+      height: 75px;
       background-repeat: no-repeat;
       background-size: contain;
+      background-position: center;
       &.card {
-        height: 56px;
         background-image: url(../../images/footer/card.svg);
       }
       &.money {
-        height: 75px;
         background-image: url(../../images/footer/money.svg);
       }
       &.support {
-        height: 75px;
         background-image: url(../../images/footer/support.svg);
       }
       &.car {
-        height: 53px;
         background-image: url(../../images/footer/car.svg);
       }
     }
@@ -124,10 +123,11 @@
   background-repeat: no-repeat;
   background-size: 90%;
   z-index: 10;
-  background-color: var(--primary-1);
   border-radius: 50%;
+  border: 2px solid var(--primary-1);
   &:hover {
-    background-size: 94%;
+    transform: scale(1.05);
+    box-shadow: 0 0 10px rgba(var(--black-rgb), 0.25);
   }
 }
 
@@ -137,7 +137,6 @@
     .list {
       flex-wrap: nowrap;
       gap: 6em;
-      justify-content: center;
 
       .listitem {
         width: auto;
