--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -83,27 +83,24 @@
       display: flex;
       flex-direction: row;
       gap: 0.5em;
-      justify-content: right;
+      justify-content: center;
       align-items: center;
     }
 
     .icon {
       background-size: contain;
       background-repeat: no-repeat;
+      background-position: center;
+      width: 18px;
+      height: 18px;
       &.phone {
         background-image: url(../../images/header/ico-phone.svg);
-        width: 15px;
-        height: 15px;
       }
       &.whats {
         background-image: url(../../images/header/ico-whats.svg);
-        width: 18px;
-        height: 18px;
       }
       &.mail {
         background-image: url(../../images/header/ico-mail.svg);
-        width: 16px;
-        height: 11px;
       }
     }
 
@@ -167,6 +164,10 @@
     .socialmedia {
       position: initial;
       transform: translateX(0);
+
+      .listitem {
+        justify-content: right;
+      }
     }
 
     .menu-icon {
