--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -63,6 +63,9 @@
       background-repeat: no-repeat;
       background-size: contain;
       display: block;
+      &:hover {
+        transform: scale(1.1);
+      }
       &.whats {
         width: 24px;
         height: 24px;
@@ -121,7 +124,7 @@
   background-image: url(../../images/footer/whats-fixed.png);
   background-position: center center;
   background-repeat: no-repeat;
-  background-size: 90%;
+  background-size: cover;
   z-index: 10;
   border-radius: 50%;
   border: 2px solid var(--primary-1);
