--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -156,7 +156,7 @@
         font-size: 1.25em;
         padding: 0.5em;
         &:hover {
-          color: var(--secondary-1);
+          color: var(--primary-1);
         }
       }
     }
