--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,6 +1,7 @@
 @import '../styles/break-points';
 
 .index-page {
+
   .sobre {
 
     .flex {
@@ -24,10 +25,62 @@
       }
     }
   }
+
+  .nossoscarros {
+    background-color: var(--grey-5);
+
+    .flex {
+      display: flex;
+      flex-direction: column;
+      gap: 2em;
+    }
+
+    .listicons {
+      display: flex;
+      flex-direction: row;
+      gap: 1em;
+      align-items: center;
+      justify-content: space-around;
+      flex-wrap: wrap;
+
+      .item {
+        display: flex;
+        flex-direction: column;
+        width: 45%;
+        gap: 0.5em;
+        justify-content: center;
+        align-items: center;
+        background-color: var(--white);
+        padding: 1em;
+        border-radius: 10px;
+
+        .icon {
+          width: 75px;
+          height: 75px;
+          background-repeat: no-repeat;
+          background-position: center;
+          background-size: cover;
+          &.carroslimpos {
+            background-image: url(../images/home/carros-limpos.svg);
+          }
+          &.revisao {
+            background-image: url(../images/home/revisao-em-dia.svg);
+          }
+          &.semtaxas {
+            background-image: url(../images/home/sem-taxas-ocultas.svg);
+          }
+          &.alugueis {
+            background-image: url(../images/home/alugueis-flexiveis.svg);
+          }
+        }
+      }
+    }
+  }
 }
 
 @media (min-width: $md) {
   .index-page {
+
     .sobre {
 
       .flex {
@@ -37,6 +90,31 @@
         .text {
           flex: 1;
         }
+      }
+    }
+  }
+}
+
+@media (min-width: $lg) {
+  .index-page {
+
+    .nossoscarros {
+      background-image: url(../images/home/nossos-carros.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
+
+      .flex {
+        flex-direction: row;
+        gap: 4em;
+      }
+
+      .icones {
+        flex: 1;
+      }
+
+      .text {
+        flex: 2;
       }
     }
   }
