--- a/src/components/duvidas/duvidas.scss
+++ b/src/components/duvidas/duvidas.scss
@@ -92,7 +92,7 @@
     .listicon {
       display: flex;
       flex-direction: row;
-      justify-content: space-around;
+      justify-content: center;
       align-items: center;
       gap: 1em;
       flex-wrap: wrap;
