--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -40,7 +40,7 @@
       flex-direction: row;
       gap: 1em;
       align-items: center;
-      justify-content: space-around;
+      justify-content: center;
       flex-wrap: wrap;
 
       .item {
