--- a/src/components/duvidas/duvidas.scss
+++ b/src/components/duvidas/duvidas.scss
@@ -37,6 +37,8 @@
         justify-content: center;
         align-items: center;
         border-bottom: 1px solid var(--grey-4);
+        cursor: pointer;
+        position: relative;
         &:last-child {
           border-bottom: none;
         }
@@ -82,6 +84,10 @@
           background-color: transparent;
           flex: 0.1;
           max-width: 25px;
+        }
+
+        strong {
+          display: block;
         }
       }
     }
