--- a/src/components/duvidas/duvidas.scss
+++ b/src/components/duvidas/duvidas.scss
@@ -99,7 +99,7 @@
       display: flex;
       flex-direction: row;
       justify-content: center;
-      align-items: center;
+      align-items: stretch;
       gap: 1em;
       flex-wrap: wrap;
 
@@ -137,8 +137,8 @@
         .protecaoveiculo i {
           background-image: url(../../images/duvidas/protecao-do-veiculo.svg);
         }
-        .protecaoterceiros i {
-          background-image: url(../../images/duvidas/protecao-terceiros.svg);
+        .conforto i {
+          background-image: url(../../images/duvidas/conforto.svg);
         }
         .caucao i {
           background-image: url(../../images/duvidas/caucao.svg);
