--- a/src/components/duvidas/duvidas.scss
+++ b/src/components/duvidas/duvidas.scss
@@ -123,6 +123,7 @@
           display: flex;
           flex-direction: row;
           align-items: center;
+          max-height: 50px;
 
           i {
             background-repeat: no-repeat;
