--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -50,11 +50,11 @@ a {
 p {
   padding-bottom: 1em;
   line-height: 1.5em;
-  text-align: justify;
+  text-align: left;
 }
 
 .paragraph p {
-  text-align: justify;
+  text-align: left;
 }
 
 a,
