--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,10 @@
 ---
+import Header from "../components/Header.astro";
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
-<Layout>
-	<div class="h-100 bg-amber-200">qqqq</div>
+<Layout title="Home" description="Home">
+  <Header />
+	<div class="h-100 bg-amber-200 pt-20 container">qqqq</div>
 </Layout>
