--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -28,6 +28,8 @@
 @layer base {
   h1 {
     font-size: var(--text-2xl);
+    line-height: 2.75rem;
+    font-weight: bold;
   }
   h2 {
     font-size: var(--text-xl);
