--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -14,7 +14,7 @@ const links = [
 
   <!-- <span class="material-symbols-outlined">search</span> -->
   <nav class="fixed z-50 container top-0 mx-auto">
-    <div class="max-w-screen-xl justify-between md:justify-normal flex flex-wrap items-center mx-auto p-4">
+    <div class="justify-between md:justify-normal flex flex-wrap items-center mx-auto p-4">
       <a href="#" class="flex items-center space-x-3 md:mr-9 lg:mr-20">
           <img src={logoHeader.src} alt="Camdal Logo" />
       </a>
@@ -37,5 +37,3 @@ const links = [
   </nav>
 
 </header>
-
-
