--- a/src/components/ListLinksHeader.astro
+++ b/src/components/ListLinksHeader.astro
@@ -13,7 +13,7 @@ const currentPath = Astro.url.pathname.replace(/^\//, "");
 
 ---
 
-<ul class="flex flex-col text-sm font-medium p-4 md:p-0 mt-4 rounded-lg bg-c-blue md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
+<ul class="flex flex-col w-full text-sm font-medium p-4 md:p-0 mt-4 rounded-lg bg-c-blue md:space-x-8 rtl:space-x-reverse md:flex-row md:mt-0 md:border-0 md:bg-transparent">
   {
     links.map((i) => {
       const url = i.href.replace(/^\//, "");
