--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,14 @@
 ---
 import AtendimentoHumanizado from "../components/AtendimentoHumanizado.astro";
+import Avaliacoes from "../components/Avaliacoes.astro";
 import BannerReserva from "../components/BannerReserva.astro";
 import CarrouselCarros from "../components/CarrouselCarros";
 import ComoFunciona from "../components/ComoFunciona.astro";
 import ContainerPage from "../components/ContainerPage.astro";
+import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Localizacao from "../components/Localizacao.astro";
+import RodeComCamdal from "../components/RodeComCamdal.astro";
 import Layout from '../layouts/Layout.astro';
 import "../styles/global.css";
 ---
@@ -18,5 +21,8 @@ import "../styles/global.css";
     <div class="mt-28"><CarrouselCarros client:only="react" /></div>
     <div><AtendimentoHumanizado /></div>
     <div class="mt-14"><Localizacao /></div>
+    <div class="py-16"><Avaliacoes /></div>
+    <div class="py-16 max-w-6xl m-auto"><RodeComCamdal /></div>
   </ContainerPage>
+  <Footer />
 </Layout>
