--- a/src/components/Localizacao.astro
+++ b/src/components/Localizacao.astro
@@ -8,7 +8,7 @@ import { Maps } from "./Maps";
     Localização <D block>estratégica</D>
   </h2>
 
-  <div class="w-6xl"><Maps client:only="react" /></div>
+  <div class="max-w-6xl w-full"><Maps client:only="react" /></div>
 
   <p class="font-light text-sm max-w-xl text-center mx-auto">Cianorte encontra-se localizada no Noroeste Paranaense. A Cidade está estrategicamente no centro, a uma distância média de 80 a 90 Km das vizinhas, Maringá, Campo Mourão, Umuarama e Paranavaí.</p>
 </div>
