--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,11 +18,11 @@ import "../styles/global.css";
 	<ContainerPage>
     <BannerReserva/>
     <div class="xl:mt-20 2xl:mt-36"><ComoFunciona  /></div>
-    <div class="mt-28"><CarrouselCarros client:only="react" /></div>
-    <div><AtendimentoHumanizado /></div>
+    <div class="mt-14 md:mt-28"><CarrouselCarros client:only="react" /></div>
+    <div class="mt-14 md:mt-0"><AtendimentoHumanizado /></div>
     <div class="mt-14"><Localizacao /></div>
     <div class="py-16"><Avaliacoes /></div>
-    <div class="py-16 max-w-6xl m-auto"><RodeComCamdal /></div>
+    <div class="md:py-16 max-w-6xl m-auto sm:mb-28 md:mb-0"><RodeComCamdal /></div>
   </ContainerPage>
   <Footer />
 </Layout>
