--- a/src/components/AtendimentoHumanizado.astro
+++ b/src/components/AtendimentoHumanizado.astro
@@ -1,6 +1,9 @@
 ---
 import imgAtendimentoHumanizado from "../assets/atendimento-humanizado.png";
 import imgVantagens from "../assets/vantagens.png";
+import imgMobileAtendimentoHumanizado from "../assets/atendimento-humanizado-mobile.png";
+import imgMobileVantagens from "../assets/vantagens-mobile.png";
+
 import D from "./D.astro";
 import ItemVantagens from "./ItemVantagens.astro";
 
@@ -29,20 +32,21 @@ const vantagens = [
 
 ---
 
-<section class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2 gap-8 items-start relative -bottom-36">
-    <div class="w-full">
-      <img src={imgVantagens.src} alt="Entrega de chave" class="w-full rounded-md object-cover">
+<section class="max-w-7xl mx-auto grid grid-cols-1 lg:grid-cols-2 lg:gap-8 items-start relative lg:-bottom-36">
+    <div class="max-w-10/12 md:max-w-max lg:w-full mx-auto">
+      <img src={imgVantagens.src} alt="Entrega de chave" class="hidden w-full rounded-md object-cover h-80 lg:h-auto lg:block">
+      <img src={imgMobileVantagens.src} alt="Entrega de chave" class="rounded-md lg:hidden mx-auto">
     </div>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 gap-12 pt-24 px-14">
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-6 xl:gap-12 pt-12 xl:pt-24 px-7 xl:px-14">
       {vantagens.map((vantagem) => (
         <ItemVantagens vantagem={vantagem}  />
       ))}
     </div>
 </section>
 
-<section class="max-w-7xl mx-auto mt-16 grid grid-cols-1 lg:grid-cols-2 gap-8 items-center">
-  <div class="mt-16">
+<section class="max-w-7xl mx-auto mt-16 grid grid-cols-1 lg:grid-cols-2 lg:gap-8 items-center px-7 lg:px-0">
+  <div class="mt-16 order-2 lg:order-1">
     <h2 class="text-2xl md:text-4xl font-bold mb-8 text-c-gray">
       Atendimento 100% <D block>Humanizado</D>
     </h2>
@@ -55,7 +59,8 @@ const vantagens = [
     </p>
   </div>
 
-  <div class="w-full">
-    <img src={imgAtendimentoHumanizado.src} alt="Atendimento humanizado" class="w-full rounded-md object-cover">
+  <div class="lg:w-full mx-auto order-1 lg:order-2">
+    <img src={imgAtendimentoHumanizado.src} alt="Atendimento humanizado" class="w-full hidden lg:block rounded-md object-cover">
+    <img src={imgMobileAtendimentoHumanizado.src} alt="Entrega de chave" class="rounded-md lg:hidden mx-auto">
   </div>
 </section>
