--- a/src/components/Avaliacoes.astro
+++ b/src/components/Avaliacoes.astro
@@ -23,18 +23,18 @@ const avaliacoes = [
 
 ---
 
-<section class="max-w-7xl mx-auto text-center">
-    <h2 class="text-2xl md:text-4xl font-bold text-gray-900 mb-16">
-      Veja o que estão falando <D block>sobre nós</D></span>
-    </h2>
+<section class="max-w-7xl mx-auto px-7 lg:px-0 text-center">
+  <h2 class="text-2xl/8 md:text-4xl font-bold text-gray-900 mb-8 md:mb-16">
+    Veja o que estão falando <D block>sobre nós</D></span>
+  </h2>
 
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mb-8">
-      <CardAvaliacao avaliacoes={avaliacoes} />
-    </div>
+  <div class="grid grid-cols-1 md:grid-cols-1 lg:grid-cols-3 gap-6 mb-8">
+    <CardAvaliacao avaliacoes={avaliacoes} />
+  </div>
 
-    <div class="w-72 mx-auto">
-      <a class="flex justify-items-center justify-center border border-gray-400 text-gray-900 px-6 py-2 rounded-md hover:bg-gray-100 transition" href="https://www.google.com/search?q=Camdal&rlz=1C1FKPE_enBR1114BR1114&oq=Camdal&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIGCAEQRRg8MgYIAhBFGDwyBggDECMYJzINCAQQLhivARjHARiABDIGCAUQRRg8MgYIBhBFGDwyBggHEEUYPNIBCDE0MjdqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8#lrd=0x94ed5bbca9a05725:0x1e1ed43ed7bd31a9,1,,,," target="_blank">
-        Ver todas as avaliações <span class="material-symbols-outlined text-sm ml-5">star_shine</span>
-      </a>
-    </div>
-  </section>
+  <div class="w-72 mx-auto">
+    <a class="flex justify-items-center justify-center border border-gray-400 text-gray-900 px-6 py-2 rounded-md hover:bg-gray-100 transition" href="https://www.google.com/search?q=Camdal&rlz=1C1FKPE_enBR1114BR1114&oq=Camdal&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIGCAEQRRg8MgYIAhBFGDwyBggDECMYJzINCAQQLhivARjHARiABDIGCAUQRRg8MgYIBhBFGDwyBggHEEUYPNIBCDE0MjdqMGo0qAIAsAIB&sourceid=chrome&ie=UTF-8#lrd=0x94ed5bbca9a05725:0x1e1ed43ed7bd31a9,1,,,," target="_blank">
+      Ver todas as avaliações <span class="material-symbols-outlined text-sm ml-5">star_shine</span>
+    </a>
+  </div>
+</section>
