criacao da pagina nossos carros

--- a/src/components/D.astro
+++ b/src/components/D.astro
@@ -6,6 +6,7 @@ interface Props {
 const { block } = Astro.props;
 ---
 
-<spam class=`text-c-orange ${block ? "block" : ""}`>
+<span class=`text-c-orange ${block ? "block" : ""}`>
   <slot />
-</spam>
+</span>
+
