--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,8 +4,8 @@ import ListLinksHeader from "./ListLinksHeader.astro";
 
 const links = [
   { name: "Home", href: "/" },
+  { name: "Nossos Carros", href: "nossos-carros" },
   { name: "Sobre", href: "sobre" },
-  { name: "Serviços", href: "servicos" },
   { name: "Contato", href: "contato" },
 ];
 ---
