--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,7 +22,7 @@ import "../styles/global.css";
     <div class="mt-14 md:mt-0"><AtendimentoHumanizado /></div>
     <div class="mt-14"><Localizacao /></div>
     <div class="py-16"><Avaliacoes /></div>
-    <div class="md:py-16 max-w-6xl m-auto sm:mb-28 md:mb-0"><RodeComCamdal /></div>
+    <div class="md:py-16 max-w-6xl m-auto"><RodeComCamdal /></div>
   </ContainerPage>
   <Footer />
 </Layout>
