section sobre camdal

--- a/src/components/ComoFunciona.astro
+++ b/src/components/ComoFunciona.astro
@@ -31,7 +31,7 @@ import arrow from "../assets/arrow-curved.png"
 
       <!-- Etapa 2 -->
       <div class="flex flex-col items-center">
-        <div class="bg-orange-500 text-white p-4 sm:p-5 rounded-lg mb-4">
+        <div class="bg-c-orange text-white p-4 sm:p-5 rounded-lg mb-4">
           <span class="material-symbols-outlined sm:!text-5xl">event_available</span>
         </div>
         <span class="font-semibold text-xs sm:text-lg text-c-gray">Data de retirada</span>
@@ -44,7 +44,7 @@ import arrow from "../assets/arrow-curved.png"
 
       <!-- Etapa 3 -->
       <div class="flex flex-col items-center">
-        <div class="bg-blue-900 text-white p-4 sm:p-5 rounded-lg mb-4">
+        <div class="bg-c-blue text-white p-4 sm:p-5 rounded-lg mb-4">
           <span class="material-symbols-outlined sm:!text-5xl">car_rental</span>
         </div>
         <span class="font-semibold text-xs sm:text-lg text-c-gray">Reserve seu carro</span>
