--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Avaliacoes from "../components/Avaliacoes.astro";
 import BannerReserva from "../components/BannerReserva.astro";
 import CarrouselCarros from "../components/CarrouselCarros";
 import ComoFunciona from "../components/ComoFunciona.astro";
+import ConhecaCamdal from "../components/ConhecaCamdal.astro";
 import ContainerPage from "../components/ContainerPage.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
@@ -20,6 +21,7 @@ import "../styles/global.css";
     <div class="xl:mt-20 2xl:mt-36"><ComoFunciona  /></div>
     <div class="mt-14 md:mt-28"><CarrouselCarros client:only="react" /></div>
     <div class="mt-14 md:mt-0"><AtendimentoHumanizado /></div>
+    <div class="py-28"><ConhecaCamdal /></div>
     <div class="mt-14"><Localizacao /></div>
     <div class="py-16"><Avaliacoes /></div>
     <div class="md:py-16 max-w-6xl m-auto"><RodeComCamdal /></div>
