--- a/src/components/ConhecaCamdal.astro
+++ b/src/components/ConhecaCamdal.astro
@@ -11,17 +11,20 @@ import D from "./D.astro";
 >
   <div class="w-full h-full absolute top-0 right-0 z-1 bg-contain bg-no-repeat" style={`background-image: url(${logoVertical.src}); background-position: 90% center;`}></div>
 
-  <div class="relative z-10 max-w-2xl">
-    <img src={logo.src} alt="Logo Camdal" class="mb-9 w-36 h-auto" />
-    <h1 class="text-4xl font-bold mb-4">
-      Conheça <D>sobre</D> nós
-    </h1>
-    <p class="mb-6 text-sm font-light max-w-lg">
-      Somos uma empresa especializada na locação de carros, modalidade RAC – Rent a Car.
-      A Camdal foi criada, sempre buscando a Excelência no atendimento aos clientes.
-    </p>
-    <button class="bg-c-orange hover:bg-c-blue hover:cursor-pointer text-white font-semibold py-2 px-6 rounded">
-      Ver mais
-    </button>
+  <div class="max-w-7xl w-7xl mx-auto">
+    <div class="relative z-10 max-w-2xl">
+      <img src={logo.src} alt="Logo Camdal" class="mb-9 w-36 h-auto" />
+      <h1 class="text-4xl font-bold mb-4">
+        Conheça <D>sobre</D> nós
+      </h1>
+      <p class="mb-6 text-sm font-light max-w-lg">
+        Somos uma empresa especializada na locação de carros, modalidade RAC – Rent a Car.
+        A Camdal foi criada, sempre buscando a Excelência no atendimento aos clientes.
+      </p>
+      <button class="bg-c-orange hover:bg-c-blue hover:cursor-pointer text-white font-semibold py-2 px-6 rounded">
+        Ver mais
+      </button>
+    </div>
   </div>
+
 </section>
