mock categorias carros

--- a/src/components/BannerReserva.astro
+++ b/src/components/BannerReserva.astro
@@ -1,6 +1,6 @@
 ---
 
-import carBanner from "../assets/car-banner.png";
+import carBanner from "../assets/car-banner-home.png";
 import D from "./D.astro";
 import { FormBanner } from "./FormBanner";
 import BannerBgAnimated from "./BannerBgAnimated.astro";
