--- a/src/pages/nossos-carros.astro
+++ b/src/pages/nossos-carros.astro
@@ -13,7 +13,7 @@ import RodeComCamdal from "../components/RodeComCamdal.astro";
 <Layout title="Home" description="Home">
   <Header />
 	<ContainerPage>
-    <BannerReserva/>
+    <BannerReserva type="carros" />
     <div class="xl:mt-20 2xl:mt-36"><NossosCarrosContent client:only="react" /></div>
     <div class="py-16"><Avaliacoes /></div>
     <div class="md:py-16 max-w-6xl m-auto"><RodeComCamdal /></div>
