--- a/src/pages/contato.astro
+++ b/src/pages/contato.astro
@@ -1,6 +1,7 @@
 ---
 import Avaliacoes from "../components/Avaliacoes.astro";
 import BannerReserva from "../components/BannerReserva.astro";
+import BannerSobre from "../components/BannerSobre.astro";
 import ContainerPage from "../components/ContainerPage.astro";
 import D from "../components/D.astro";
 import Faq from "../components/Faq.astro";
@@ -14,14 +15,14 @@ import "../styles/global.css";
 <Layout title="Home" description="Home">
   <Header />
 	<ContainerPage>
-    <BannerReserva/>
+    <BannerSobre type="contato">
+      <h1 class="text-2xl">Entre em <D>contato</D></h1>
+      <p class="text-lg pt-3">
+        Estamos sempre preparados para ajudar você no que for preciso. Dúvidas, solicitação ou sugestões? Entre em contato com a gente!
+      </p>
+    </BannerSobre>
     <div class="grid grid-cols-1 lg:grid-cols-5 max-w-6xl px-5 sm:px-0 mx-auto xl:mt-20 2xl:mt-36 gap-16">
       <div class="col-span-2 flex flex-col justify-center gap-8">
-        <div>
-          <h2 class="text-2xl font-bold mb-4">Entre em <D>contato</D></h2>
-          <p class="text-base font-light">Estamos sempre preparados para ajudar você no que for preciso. Dúvidas, solicitação ou sugestões? Entre em contato com a gente!</p>
-        </div>
-
         <div>
           <h2 class="text-2xl font-bold mb-4">Redes sociais</h2>
           <div class="flex flex-col gap-2">
